--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,13 +60,16 @@ services:
   label-frontend:
     build:
       context: ./label-frontend
-      dockerfile: Dockerfile
-      args:
-        VITE_API_URL: ${VITE_API_URL}
+      dockerfile: Dockerfile.dev
     container_name: label_frontend
     restart: unless-stopped
     ports:
-      - "${LABEL_FRONTEND_PORT}:80"
+      - "${LABEL_FRONTEND_PORT}:5173"
+    volumes:
+      - ./label-frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
     depends_on:
       - label-backend
     networks:
@@ -74,7 +77,7 @@ services:
     env_file:
       - .env
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5173"]
       interval: 30s
       timeout: 10s
       retries: 3
