--- a/label-service/requirements.txt
+++ b/label-service/requirements.txt
@@ -8,9 +8,7 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 
 # Database
-sqlalchemy[asyncio]==2.0.23
-asyncpg==0.29.0
-alembic==1.13.0
+psycopg2-binary==2.9.9
 
 # CORS
 python-dotenv==1.0.0
