--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,31 @@ services:
       timeout: 5s
       retries: 5
 
+  # Sentiment Analysis Service
+  sentiment-service:
+    build:
+      context: ./sentiment
+      dockerfile: Dockerfile
+    container_name: sentiment_service
+    restart: unless-stopped
+    ports:
+      - "${SENTIMENT_PORT:-8000}:8000"
+    volumes:
+      - ./sentiment:/app
+      - ./sentiment-model:/models/sentiments
+    environment:
+      SENTIMENT_MODEL_PATH: /models/sentiments
+    networks:
+      - label_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    env_file:
+      - .env
+
   # Label Management Backend Service
   label-backend:
     build:
@@ -42,8 +67,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: 5432
+      SENTIMENT_SERVICE_URL: http://sentiment-service:8000/api/v1
     depends_on:
       postgres:
+        condition: service_healthy
+      sentiment-service:
         condition: service_healthy
     networks:
       - label_network
