--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,16 +33,15 @@ services:
     container_name: sentiment_service
     restart: unless-stopped
     ports:
-      - "${SENTIMENT_PORT:-8000}:8000"
+      - "${SENTIMENT_EXTERNAL_PORT}:${SENTIMENT_PORT}"
     volumes:
-      - ./sentiment:/app
       - ./sentiment-model:/models/sentiments
     environment:
       SENTIMENT_MODEL_PATH: /models/sentiments
     networks:
       - label_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${SENTIMENT_PORT}/api/v1/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -67,7 +66,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: 5432
-      SENTIMENT_SERVICE_URL: http://sentiment-service:8000/api/v1
+      SENTIMENT_SERVICE_URL: http://sentiment-service:${SENTIMENT_PORT}/api/v1
     depends_on:
       postgres:
         condition: service_healthy
