--- a/embedding-training/Dockerfile
+++ b/embedding-training/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.10-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Upgrade pip first
+RUN pip install --upgrade pip setuptools wheel
+
 # Copy the requirements file and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
