--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,7 @@ services:
       - "${LABEL_BACKEND_PORT}:8001"
     volumes:
       - ./label-service:/app
+      - ./label-service/logs:/app/logs
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
